# Git-DIT

./: LICENSE  README.en.md  README.md  project-structure.md  pyproject.toml
.history/: .gitignore_20251114175402
.history/src/git_dit/cli/: main_20251114135947.py  main_20251114175220.py  main_20251114175558.py  main_20251114181447.py  main_20251114181506.py  main_20251114181645.py  main_20251114182144.py  main_20251117130232.py  main_20251117130300.py  main_20251117130602.py  main_20251117130643.py  main_20251117131000.py  main_20251117131013.py  main_20251117131206.py  main_20251117131209.py  main_20251117131325.py  main_20251117131342.py
.history/src/git_dit/cli/command/: __init___20251114180815.py  main_menu_navigation_20251114181124.py  main_menu_navigation_20251114181151.py  main_menu_navigation_20251114181524.py  main_menu_navigation_20251117131126.py  main_menu_navigation_20251118122528.py  main_menu_navigation_20251118122946.py  main_menu_navigation_20251118124835.py  main_menu_navigation_20251118125419.py  main_menu_navigation_20251118130909.py  main_menu_navigation_20251118131317.py
docs/: commands.md  index.md  plugins.md
docs/api/: git_dit.rst
requirements/: base.txt  dev.txt  test.txt
scripts/: benchmark.py  dev_setup.sh  release.py
src/git_dit/: __init__.py
src/git_dit/cli/: __init__.py  main.py
